--- a/FullStack/frontend/src/styles/Register.css
+++ b/FullStack/frontend/src/styles/Register.css
@@ -11,7 +11,7 @@
   .register-title {
     font-size: 2rem;
     margin-bottom: 20px;
-    color:  #FF6196;
+    color:  #ffffff;
   }
   
   .register-input, .register-select {
